--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,13 @@
+
 <% @products.each do |product| %>
-  <%= product.name %>: <%= product.price %>
+  <div class='card'>
+    <div class="card-image">
+      <%= image_tag 'http://s.newsweek.com/sites/www.newsweek.com/files/styles/lg/public/2017/02/20/kamalakhan220.jpg', alt: 'Ms Marvel, Kamala Khan', width: 350, height: 350 %>
+    </div>
+    <div class="card-content">
+      <div class="content">
+        <%= product.name %>
+      </div>
+    </div>
+</div>
 <% end %>
