--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,17 @@
 
   <body>
 
+    <header>
+      <nav>
+        <% if session[:merchant_id] %>
+        Logged in as: <%= (Merchant.find_by(id: session[:merchant_id])).username %>
+        <%= link_to "Log Out", logout_path, method: :delete %>
+        <% else %>
+        <%= link_to "Log in with Google", "auth/google_oauth2" %>
+        <% end %>
+      </nav>
+    </header>
+
     <%= yield %>
 
   </body>
