--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -8,6 +8,8 @@
   <%= f.text_field :price %>
   <%= f.label :stock %>
   <%= f.number_field :stock %>
+  <%= f.label :categories %>
+  <%= collection_check_boxes :product, :category_ids, Category.all, :id, :name %>
   <%= f.label :description %>
   <%= f.text_area :description %>
   <%= f.submit action_name %>
