--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,8 +5,8 @@
     <p><%= @product.details %></p>
     <p>Quantity Available: <%= @product.stock %></p>
     <ul>
-      <li><%= link_to "Add to cart", 
-    <button type="button">See More from <%= @product.merchant %>
+      <li><%= link_to "Add to cart", new_orderitem_path %></li>
+    <li><%= link_to "See More from @product.merchant",  %><li>
 
   </div>
 </section>
