--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,7 +6,7 @@
     <p>Quantity Available: <%= @product.stock %></p>
     <ul>
       <li><%= link_to "Add to cart", new_orderitem_path %></li>
-    <li><%= link_to "See More from @product.merchant",  %><li>
-
+      <li><%= link_to "See More from @product.merchant", merchant_products_path %><li>
+    </ul>
   </div>
 </section>
