--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,40 @@
  *= require foundation_and_overrides
 
  */
+
+
+body {
+  height: auto;
+  display: grid;
+  grid-template-rows: 7vh 3fr 2fr;
+  grid-template-columns: 1fr 3fr;
+  grid-gap: 20px;
+}
+
+header {
+  grid-column: 1 / span 2;
+}
+
+.navbar {
+  display: inline-flex;
+  width: 100vw;
+}
+.left-nav {
+  grid-row: 2 / span 1;
+  grid-column: 1 / span 1;
+  border-right: solid 1px rgba(18, 18, 18, 0.24);
+  border-bottom: solid 2px rgba(18, 18, 18, 0.24);
+  border-top: solid 1px rgba(18, 18, 18, 0.24);
+  box-shadow: 0 2px 2px 0;
+}
+
+main {
+  grid-row: 2 / span 1;
+  grid-column: 2 / span 1;
+  min-height: auto;
+}
+
+footer {
+  grid-row-start: 3;
+  grid-column: 1 / span 2;
+}
