--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
 
     <%= stylesheet_link_tag    "application" %>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css"> -->
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
 
   <body>
+    <header>
+      <nav class='navbar'>
+        <%= link_to 'Home', root_path, class: 'navbar-item' %>
+        <%= link_to 'All Products', products_path, class: 'navbar-item' %>
+        <%= link_to 'All Merchants', merchants_path, class: 'navbar-item' %>
+      </nav>
+    </header>
 
-    <%= yield %>
+    <aside class="left-nav">
+      <h3>Categories</h3>
+      <div class="nav-categories">
+        <% Category.all.each do |category| %>
+        <div class="category-name">
+          <%= link_to category.name.capitalize, category_path(category.name) %>
+        </div>
+        <% end %>
+      </div>
+    </aside>
+
+    <main>
+      <%= yield %>
+    </main>
+
+    <footer>
+      Footer
+    </footer>
 
   </body>
 </html>
