initialized orders controller, added current_cart method to order model

--- a/app/views/orders/viewcart.html.erb
+++ b/app/views/orders/viewcart.html.erb
@@ -4,5 +4,7 @@
       <p><%= item.product_id %></p>
       <%= link_to "Remove Item", orderitem_path, method: :delete, data: { confirm: "With great power comes great responsibility. Are you sure you want to delete #{item.title}?"} %>
     </div>
-    <% end %>
+  <% end %>
+  <%= link_to "Checkout", edit_order_path, method: :patch %>
+
  </section>
