--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,6 +1,20 @@
 <%= page_title %>
 
-<%= form_for @product do |f| %>
+<% @product.errors.messages.each do |column, message| %>
+  <%= column %>: <%= message %>
+<% end %>
+
+<% @category.errors.messages.each do |column, message| %>
+  <%= column %>: <%= message %>
+<% end %>
+
+<%= form_tag new_category_path do %>
+  <%= label_tag :name, 'New Category' %>
+  <%= text_field_tag :name, params[:name], required: true %>
+  <%= button_tag 'Add', class: 'button small' %>
+<% end %>
+
+<%= form_for @product, url: merchant_products_path do |f| %>
   <%= f.hidden_field :merchant_id %>
   <%= f.label :name %>
   <%= f.text_field :name %>
@@ -10,10 +24,7 @@
   <%= f.number_field :stock %>
   <%= f.label :categories %>
   <%= collection_check_boxes :product, :category_ids, Category.all, :id, :name %>
-  <%= form_for @category do |c| %>
-    <%= c.button 'Add new categories', method: :post, url: '/categories/new' %>
-  <% end %>
   <%= f.label :description %>
   <%= f.text_area :description %>
-  <%= f.submit action_name %>
+  <%= f.submit action_name, class: 'button' %>
 <% end %>
