--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,10 @@
   </head>
 
   <body>
-
-    <%= yield %>
-
+    <header>
+    </header>
+    <main>
+      <%= yield %>
+    </main>
   </body>
 </html>
