added google oauth stuff, added query for categories with works, added required login to merchant actions

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,11 +1,16 @@
 <%= page_title %>
 
-<% @product.errors.messages.each do |column, message| %>
-  <%= column %>: <%= message %>
-<% end %>
-
-<% @category.errors.messages.each do |column, message| %>
-  <%= column %>: <%= message %>
+<% if @product || @cagetory %>
+  <% if @product.errors.any? %>
+    <% @product.errors.messages.each do |column, message| %>
+      <%= column %>: <%= message %>
+    <% end %>
+  <% end %>
+  <%# if @category.errors.any? %>
+    <%# @category.errors.messages.each do |column, message| %>
+      <%# column %>: <%# message %>
+    <%# end %>
+  <%# end %>
 <% end %>
 
 <%= form_tag new_category_path do %>
