--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,21 @@
         <%= link_to 'Home', root_path, class: 'navbar-item' %>
         <%= link_to 'All Products', products_path, class: 'navbar-item' %>
         <%= link_to 'All Merchants', merchants_path, class: 'navbar-item' %>
+        <div class="login">
+          <% if session[:merchant_id] %>
+          Logged in as: <%= (Merchant.find_by(id: session[:merchant_id])).username %>
+          <%= link_to "Log Out", logout_path, method: :delete %>
+          <% else %>
+          <%= link_to "Log in with Google", "auth/google_oauth2" %>
+          <% end %>
+        </div>
       </nav>
     </header>
 
-<<<<<<< HEAD
     <aside class="left-nav">
       <h3>Categories</h3>
       <div class="nav-categories">
-        <% Category.all.each do |category| %>
+        <% Category.categories_with_works.each do |category| %>
         <div class="category-name">
           <%= link_to category.name.capitalize, category_path(category.name) %>
         </div>
@@ -40,20 +47,5 @@
     <footer>
       Footer
     </footer>
-=======
-    <header>
-      <nav>
-        <% if session[:merchant_id] %>
-        Logged in as: <%= (Merchant.find_by(id: session[:merchant_id])).username %>
-        <%= link_to "Log Out", logout_path, method: :delete %>
-        <% else %>
-        <%= link_to "Log in with Google", "auth/google_oauth2" %>
-        <% end %>
-      </nav>
-    </header>
-
-    <%= yield %>
->>>>>>> 0a5f8d78c64b71b4b6bf95029cfeb7b6a6b5a7e0
-
   </body>
 </html>
