product show page waiting for picture URL - will change once schemo updated

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,8 @@
 <section>
-  <img src=http://lorempixel.com/300/300 alt="placeholder image">
+  <p>Product picture goes here! @product.photo_url</p>
   <div>
     <h4><%= @product.name %></h4>
+    <p><%= @product.price %><p>
     <p><%= @product.description %></p>
     <p>Quantity Available: <%= @product.stock %></p>
     <ul>
