removed duplicate method, changed path in viewcart html

--- a/app/views/orders/viewcart.html.erb
+++ b/app/views/orders/viewcart.html.erb
@@ -1,8 +1,8 @@
  <section>
-   <% @current_order.each do |item| %>
+   <% @order.order_items.each do |item| %>
     <div>
       <p><%= item.product_id %></p>
-      <%= link_to "Remove Item", orderitem_path, method: :delete, data: { confirm: "With great power comes great responsibility. Are you sure you want to delete #{item.title}?"} %>
+      <%= link_to "Remove Item", orderitem_path(item), method: :delete, data: { confirm: "With great power comes great responsibility. Are you sure you want to delete #{item.title}?"} %>
     </div>
   <% end %>
   <%= link_to "Checkout", edit_order_path, method: :patch %>
