--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
           Logged in as: <%= (Merchant.find_by(id: session[:merchant_id])).username %>
           <%= link_to "Log Out", logout_path, method: :delete %>
           <% else %>
-          <%= link_to "Log in with Google", "auth/google_oauth2" %>
+          <%= link_to "Log in with Google", auth_callback_path(:google_oauth2) %>
           <% end %>
         </div>
       </nav>
