--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -13,7 +13,7 @@
   <%# end %>
 <% end %>
 
-<%= form_tag category_index_path do %>
+<%= form_tag categories_path do %>
   <%= label_tag :name, 'New Category' %>
   <%= text_field_tag :name, params[:name], required: true %>
   <%= button_tag 'Add', class: 'button small' %>
