--- a/app/views/orders/viewcart.html.erb
+++ b/app/views/orders/viewcart.html.erb
@@ -3,13 +3,7 @@
     <div>
       <p><%= item.product.name %></p>
       <p><%= item.product.price %><p>
-        <p>
-          <%= form_for item, url: orderitem_path, method: :patch do |f| %>
-          <%= f.label :quantity %>
-          <%= f.select :quantity, (1..item.product.stock).to_a, :selected => item.quantity %>
-          <%= f.submit "Update Quantity" %>
-          <% end %>
-        </p>
+        <%= render partial: "/shared/orderitem_form", locals: { item: item } %> 
       <%= link_to "Remove Item", orderitem_path(item), method: :delete, data: { confirm: "With great power comes great responsibility. Are you sure you want to delete #{item.product.name}?"} %>
     </div>
   <% end %>
