added @merchant where session to application, changed auth_hash, updated redirect for logged in merchant

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,6 @@
 <% if @merchant %>
+
+  <%= link_to 'Products', merchant_products_path(@merchant) %>
   <p>
     <%= @merchant.username %>'s orders
   </p>
