--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,7 @@
+<% if @merchant %>
+  <h3>Your Products</h3>
+<% end %>
+
 <section class='all-products'>
   <% @products.each do |product| %>
   <div class='card'>
