--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,9 +32,15 @@ header {
 }
 
 .navbar {
-  display: inline-flex;
+  display: flex;
+  justify-content: flex-start;
   width: 100vw;
 }
+
+.float-right {
+  margin-right: auto;
+}
+
 .left-nav {
   grid-row: 2 / span 1;
   grid-column: 1 / span 1;
@@ -42,6 +48,10 @@ header {
   border-bottom: solid 2px rgba(18, 18, 18, 0.24);
   border-top: solid 1px rgba(18, 18, 18, 0.24);
   box-shadow: 0 2px 2px 0;
+}
+
+.login {
+  float: right;
 }
 
 main {
