--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,16 +14,21 @@
 
   <body>
     <header>
-      <nav class='navbar'>
-        <%= link_to 'Home', root_path, class: 'navbar-item' %>
-        <%= link_to 'All Products', products_path, class: 'navbar-item' %>
-        <%= link_to 'All Merchants', merchants_path, class: 'navbar-item' %>
-        <div class="login">
+      <nav class="top-bar" data-topbar role="navigation">
+        <div class="left">
+          <%= link_to 'Home', root_path, class: 'navbar-item' %>
+          <%= link_to 'All Products', products_path, class: 'navbar-item' %>
+          <%= link_to 'All Merchants', merchants_path, class: 'navbar-item' %>
           <% if session[:merchant_id] %>
-          Logged in as: <%= (Merchant.find_by(id: session[:merchant_id])).username %>
-          <%= link_to "Log Out", logout_path, method: :delete %>
+          <%= link_to 'Dashboard', orders_path, class: 'navbar-item' %>
+          <% end %>
+        </div>
+        <div class="right">
+          <% if @merchant %>
+            Logged in as: <%= @merchant.username %>
+            <%= link_to "Log Out", logout_path, method: :delete %>
           <% else %>
-          <%= link_to "Log in with Google", 'auth/google_oauth2' %>
+            <%= link_to "Log in with Google", 'auth/google_oauth2' %>
           <% end %>
         </div>
       </nav>
