working on add product form and img tag

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,18 +1,18 @@
 <section>
-  <p>Product picture goes here! @product.photo_url</p>
+  <%= image_tag(some_path) do %>
   <div>
     <h4><%= @product.name %></h4>
     <p><%= @product.price %><p>
     <p><%= @product.description %></p>
     <p>Quantity Available: <%= @product.stock %></p>
 
-    <%= form_for order_item, url: orderitem_path, method: :post,  do |f| %>
-      <%= f.label :quantity %>
-      <%= f.select :quantity, (1..product.stock).to_a, :selected => 1 %>
-      <%= f.submit %>
-    <% end %>
+    <%# form_for order_item, url: orderitem_path, method: :post,  do |f| %>
+      <%# f.label :quantity %>
+      <%# f.select :quantity, (1..product.stock).to_a, :selected => 1 %>
+      <%# f.submit %>
+    <%# end %>
 
-    <!-- <%# link_to "Add to cart", orderitems_path, method: :post, order_item: @product %> -->
+    <% link_to "Add to cart", orderitems_path, method: :post, order_item: @product %>
 
     <%= link_to "See More from this merchant", merchant_products_path(@product.merchant_id) %>
   </div>
