fixed a bug where selecting a merchant would log you in as the merchant

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
-<% if @merchant %>
+<% if @logged_merchant %>
   <h3>Your Products</h3>
 
-  <%= link_to 'Add a new product', new_merchant_product_path(@merchant) %>
+  <%= link_to 'Add a new product', new_merchant_product_path(@logged_merchant) %>
 <% end %>
 
 <section class='all-products'>
