--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,8 @@
           <% end %>
         </div>
         <div class="right">
-          <% if @merchant %>
-            Logged in as: <%= @merchant.username %>
+          <% if @logged_merchant %>
+            Logged in as: <%= @logged_merchant.username %>
             <%= link_to "Log Out", logout_path, method: :delete %>
           <% else %>
             <%= link_to "Log in with Google", 'auth/google_oauth2' %>
