--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,7 @@
 <section>
   <h3>Order Confirmation</h3>
+  <p>Order Placed: <%= @order.updated_at %></p>
+  <p>Order Total: $<%= @order.order_total %></p>
   <div>
     <h4>Customer Information</h4>
     <ul>
