--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,6 +2,7 @@
   <h3>Order Confirmation</h3>
   <p>Order Placed: <%= @order.updated_at %></p>
   <p>Order Total: $<%= @order.order_total %></p>
+  <p>Order Status: <%= @order.status %></p>
   <div>
     <h4>Customer Information</h4>
     <ul>
