--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,13 +8,13 @@
   <% @products.each do |product| %>
   <div class="card" style="width: 300px;">
     <div class="card-image">
-      <%= image_tag product.photo_url, alt: product.name, width: 350, height: 350 %>
+      <%= link_to image_tag(product.photo_url, alt: product.name, width: 350, height: 350), product_path(product.id) %>
     </div>
     <div class="card-content">
       <div class="content">
         <h5>
-          <%= product.name %>
-          <small> by <%= product.merchant.username %> </small>
+          <%= link_to product.name, product_path(product.id) %>
+          <small> by <%= link_to product.merchant.username, merchant_path(product.merchant_id)%> </small>
         </h5>
 
       </div>
