--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -29,6 +29,7 @@
           <td><%= item.subtotal %></td>
         </tr>
         <% end %>
-    </tr>
+      </tr>
+    </table>  
   </div>
 </section>
