added a route and view for merchant#manage_products, fixed flow/links around merchant, updated the new and edit product form, changed the redirect for the merchant add or edit product

--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -1,3 +1,7 @@
 <% @merchants.each do |merchant| %>
-  <%= link_to merchant.username, merchant_path(merchant) %>
+  <div class="card" style="width: 300px;">
+    <div class="card-content">
+      <%= link_to merchant.username, merchant_path(merchant) %>
+    </div>
+  </div>
 <% end %>
