--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,17 +28,10 @@
             Logged in as: <%= @logged_merchant.username %>
             <%= link_to "Log Out", logout_path, method: :delete %>
           <% else %>
-            <%= link_to "Log in with Google", 'auth/google_oauth2' %>
+            <%= link_to "Log in with Google", '/auth/google_oauth2' %>
           <% end %>
         </div>
       </nav>
-
-      <section class='flash'>
-        <%= flash[:error] if flash.any? %>
-        <%= flash[:success] if flash.any? %>
-        <%= flash[:failure] if flash.any? %>
-
-      </section>
     </header>
 
 
@@ -54,6 +47,13 @@
     </aside>
 
     <main>
+      <section class='flash'>
+        <%= flash[:error] if flash.any? %>
+        <%= flash[:success] if flash.any? %>
+        <%= flash[:failure] if flash.any? %>
+
+      </section>
+
       <%= yield %>
     </main>
 
