--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -2,9 +2,23 @@
 
 <h2><%= @merchant.username %></h2>
 
-<% @merchant.products.each do |product| %>
-  <div class="product_card">
-    <%= product.name %>
-    <%= product.price %>
-  </div>
+<% if @products.empty? %>
+  <h5>This merchant has no items at this time</h5>
+<% else %>
+  <% @products.each do |product| %>
+    <div class="card" style="width: 300px;">
+      <div class="card-image">
+        <%= link_to image_tag(product.photo_url, alt: product.name, width: 350, height: 350), product_path(product.id) %>
+      </div>
+      <div class="card-content">
+        <div class="content">
+          <h5>
+            <%= link_to product.name, product_path(product.id) %>
+            <small> by <%= link_to product.merchant.username, merchant_path(product.merchant_id)%> </small>
+          </h5>
+
+        </div>
+      </div>
+    </div>
+  <% end %>
 <% end %>
