Test OrderItem controller method ship

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -135,7 +135,7 @@
         </td>
         <td>
           <% if order_item.status == "pending" %>
-            <%= link_to "Cancel", cancel_path(order_item) %>
+            <%= link_to "Cancel" %>
           <% end %>
         </td>
       </tr>
