--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,10 +50,15 @@ header {
   box-shadow: 0 2px 2px 0;
 }
 
-.login {
-  float: right;
+.right {
+  display: flex;
 }
 
+.login {
+  padding-right: 2vw;
+  margin-right: 2vw;
+  border-right: 1px solid rgb(168, 168, 168);
+}
 main {
   grid-row: 2 / span 1;
   grid-column: 2 / span 1;
