--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,12 +24,15 @@
           <% end %>
         </div>
         <div class="right">
-          <% if @logged_merchant %>
+          <div class="login">
+            <% if @logged_merchant %>
             Logged in as: <%= @logged_merchant.username %>
-            <%= link_to "Log Out", logout_path, method: :delete %>
-          <% else %>
-            <%= link_to "Log in with Google", '/auth/google_oauth2' %>
-          <% end %>
+              <%= link_to "Log Out", logout_path, method: :delete %>
+            <% else %>
+              <%= link_to "Log in with Google", '/auth/google_oauth2' %>
+            <% end %>
+          </div>
+          <%= link_to 'Cart', viewcart_path(@cart) %>
         </div>
       </nav>
     </header>
