--- a/app/views/orders/viewcart.html.erb
+++ b/app/views/orders/viewcart.html.erb
@@ -7,10 +7,10 @@
         <%= f.label :quantity %>
         <%= f.select :quantity, (1..item.product.stock).to_a, :selected => item.quantity %>
         <%= f.submit %>
-      <% end %> 
+      <% end %>
       <%= link_to "Remove Item", orderitem_path(item), method: :delete, data: { confirm: "With great power comes great responsibility. Are you sure you want to delete #{item.product.name}?"} %>
     </div>
   <% end %>
-  <%= link_to "Checkout", edit_order_path, method: :patch %>
+  <%= link_to "Checkout", edit_order_path(@order) %>
 
  </section>
