--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,12 +9,11 @@
     <%= form_for :order_item, url: orderitems_path, method: :post do |f| %>
       <%= f.label :quantity %>
       <%= f.select :quantity, (1..@product.stock).to_a, :selected => 1 %>
-      <%= f.label :product_id %>
       <%= f.hidden_field :product_id, :value => @product.id%>
-      <%= f.submit %>
+      <%= f.submit 'Add to Cart' %>
     <% end %>
 
-    <% link_to "Add to cart", orderitems_path, method: :post, order_item: @product %>
+    <%# link_to "Add to cart", orderitems_path, method: :post, order_item: @product %>
 
     <%= link_to "See More from this merchant", merchant_products_path(@product.merchant_id) %>
   </div>
