set cart id in session, will give you message 'you do not have items in your cart' if you do not have a cart session

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,9 @@
               <%= link_to "Log in with Google", '/auth/google_oauth2' %>
             <% end %>
           </div>
-          <%= link_to 'Cart', viewcart_path(@cart) %>
+          <% if session[:cart_id] %>
+            <%= link_to 'Cart', viewcart_path(session[:cart_id]) %>
+          <% end %>
         </div>
       </nav>
     </header>
