--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -14,6 +14,6 @@
     <%= f.text_field :shipping_address %>
     <%= f.label :billing_address %>
     <%= f.text_field :billing_address %>
-    <%= f.submit %>
+    <%= f.submit "Submit Order" %>
   <% end %>
 </section>
