--- a/app/views/orders/viewcart.html.erb
+++ b/app/views/orders/viewcart.html.erb
@@ -6,7 +6,7 @@
       <%= form_for item, url: orderitem_path, method: :patch do |f| %>
         <%= f.label :quantity %>
         <%= f.select :quantity, (1..item.product.stock).to_a, :selected => item.quantity %>
-        <%= f.submit %>
+        <%= f.submit "Update #{item.product.name} Quantity" %>
       <% end %>
       <%= link_to "Remove Item", orderitem_path(item), method: :delete, data: { confirm: "With great power comes great responsibility. Are you sure you want to delete #{item.product.name}?"} %>
     </div>
