--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'form', locals: {action_name: 'Edit Product', page_title: 'Edit Product'} %>
+<%= render partial: 'form', locals: {action_name: 'Edit Product', url: merchant_product_path, page_title: 'Edit Product'} %>
