--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'form', locals: {action_name: 'Create New Product', page_title: 'Add a New Product'} %>
+<%= render partial: 'form', locals: {action_name: 'Create New Product', url: merchant_products_path, page_title: 'Add a New Product'} %>
