--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,6 +35,8 @@ header {
   display: flex;
   justify-content: flex-start;
   width: 100vw;
+  z-index: 10;
+  position: absolute;
 }
 
 .float-right {
@@ -121,6 +123,5 @@ footer {
   justify-content: center;
 }
 .search-bar-button {
-  /*display: inline;*/
-  width: 10vw;
+  width: 80px;
 }
