--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,33 +14,35 @@
 
   <body>
     <header>
-      <nav class="top-bar" data-topbar role="navigation">
-        <div class="left">
-          <%= link_to 'Home', root_path, class: 'navbar-item' %>
-          <%= link_to 'All Products', products_path, class: 'navbar-item' %>
-          <%= link_to 'All Merchants', merchants_path, class: 'navbar-item' %>
-          <% if session[:merchant_id] %>
-          <%= link_to 'Dashboard', orders_path, class: 'navbar-item' %>
-          <% end %>
-        </div>
-        <div class="right">
-          <%= form_tag search_path, class: 'form-inline', method: :get do %>
-            <%= text_field_tag :search, params[:search], class: 'search-bar', placeholder: 'Search...'%>
-            <%= submit_tag :search, class: 'search-bar-button'%>
-          <% end %>
-          <div class="login">
-            <% if @logged_merchant %>
-            Logged in as: <%= @logged_merchant.username %>
-              <%= link_to "Log Out", logout_path, method: :delete %>
-            <% else %>
-              <%= link_to "Log in with Google", '/auth/google_oauth2' %>
+      <div class="sticky">
+        <nav class="top-bar" data-topbar role="navigation">
+          <div class="left">
+            <%= link_to 'Home', root_path, class: 'navbar-item' %>
+            <%= link_to 'All Products', products_path, class: 'navbar-item' %>
+            <%= link_to 'All Merchants', merchants_path, class: 'navbar-item' %>
+            <% if session[:merchant_id] %>
+            <%= link_to 'Dashboard', orders_path, class: 'navbar-item' %>
             <% end %>
           </div>
-          <% if session[:cart_id] %>
+          <div class="right">
+            <%= form_tag search_path, class: 'form-inline', method: :get do %>
+            <%= text_field_tag :search, params[:search], class: 'search-bar', placeholder: 'Search...'%>
+            <%= submit_tag :search, class: 'search-bar-button'%>
+            <% end %>
+            <div class="login">
+              <% if @logged_merchant %>
+              Logged in as: <%= @logged_merchant.username %>
+              <%= link_to "Log Out", logout_path, method: :delete %>
+              <% else %>
+              <%= link_to "Log in with Google", '/auth/google_oauth2' %>
+              <% end %>
+            </div>
+            <% if session[:cart_id] %>
             <%= link_to 'Cart', viewcart_path(session[:cart_id]) %>
-          <% end %>
-        </div>
-      </nav>
+            <% end %>
+          </div>
+        </nav>
+      </div>
     </header>
 
 
